<resources>
    <string name="app_name">Plandroid</string>

    <string name="ip_address">104.137.121.245</string>
    <string name="action_settings">Settings</string>

    <string name="firstnameIn">Firstname</string>
    <string name="lastnameIn">Lastname</string>
    <string name="label_UserName">Username</string>
    <string name="label_password">Password</string>
    <string name="label_rePassword">Re-enter Password</string>
    <string name="label_PhoneNum">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_event">Create Event</string>
    <string name="search_event">Search Event</string>
    <string name="delete_event">Delete Event</string>

    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_hour">Event Hour</string>
    <string name="event_minute">Event Minute</string>
    <string name="event_des">Description</string>
    <string name="event_location">Location</string>
    <string name="event_privacy">Privacy</string>
    <string name="Set_ED">Set Event Date</string>
    <string name="Set_ET">Set Event Time</string>
    <string-array name="privacy_array">
        <item>Private</item>
        <item>Open</item>
    </string-array>
    <string-array name="department_array">
        <item>Engineering</item>
        <item>Health</item>
        <item>Music</item>
    </string-array>
    <string name="SendQuery">Send Test Query</string>
    <string name="getAllUsers">Get All Registered Users</string>

    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_delete_event">Delete Event</string>
    <string name="title_activity_search_event">Search Events</string>
    <string name="title_activity_sign_up_">Sign Up</string>
    <string name="title_activity_options_">Options</string>
    <string name="title_activity_test_query">TestQuery</string>
    <string name="deparment">Department</string>
    <string name="conditional_search">Conditional Search</string>
    <string name="criteria">Search Criteria</string>
    <string name="other_user">Other User</string>
    <string name="title_activity_department">Department</string>
    <string name="initial_results">Results List</string>

    <!-- DB Command Strings -->
    <string name="GET_USER_ALL">getAllUsers</string>
    <string name="GET_EVENTS">getEvent</string>
    <string name="CREATE_USER">createUser</string>
    <string name="DELETE_EVENT">deleteEvent</string>
    <string name="CREATE_EVENT">createEvent</string>
    <string name="AUTHENTICATE">authenticate</string>
    <string name="GET_DEPARTMENT">GET_DEPARTMENT</string>
</resources>
