<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    android:gravity="center_vertical|center_horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textColor="@color/black"
            android:id="@+id/view_event_name"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date"
            android:textColor="@color/black"
            android:id = "@+id/view_event_date"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_des"
            android:textColor="@color/black"
            android:id = "@+id/view_event_des"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_location"
            android:textColor="@color/black"
            android:id = "@+id/view_event_loc"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_privacy"
            android:textColor="@color/black"
            android:id = "@+id/view_event_pri"/>
    </LinearLayout>


</LinearLayout>
