<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/loginbg">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/loginbg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_event"
                android:id="@+id/eventQBtn"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/usernameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/label_UserName"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/event_des"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/criteria"/>

            <EditText
                android:id="@+id/in_eventname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/event_name"
                android:layout_marginBottom="5dp"/>

            <!-- Location -->
            <EditText
                android:id="@+id/ser_in_eventloc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/event_location"
                android:layout_marginBottom="5dp"/>

            <!-- Privacy -->
            <EditText
                android:id="@+id/ser_in_eventprv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/event_privacy"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/ser_in_eventOUsr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/other_user"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/searchEventListView"/>
    </LinearLayout>


</ScrollView>