<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbg">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginbg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_event"
                android:id="@+id/del_event_bt"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/del_usernameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/label_UserName"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/del_in_eventname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/event_name"
                android:layout_marginBottom="5dp"/>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:id="@+id/deleteEventListView"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>