<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:background="@color/loginbt"
        android:textColor="@color/white"
        android:text="@string/create_event" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/loginbt"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.05"
        android:text="@string/search_event" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:background="@color/loginbt"
        android:textColor="@color/white"
        android:layout_weight="0.05"
        android:text="@string/delete_event" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:background="@color/loginbt"
        android:textColor="@color/white"
        android:layout_weight="0.05"
        android:text="Department" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.70">

    </LinearLayout>


</LinearLayout>