<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="32dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/in_username"
            android:hint="@string/label_UserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/in_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/firstnameIn"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="10dp">

            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/in_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Lastname"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:padding="10dp"/>


        <EditText
            android:id="@+id/in_password"
            android:hint="@string/label_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Privacy Textview -->
            <TextView
                android:id="@+id/privacy_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dID"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="5dp" />
            <!-- Select Privacy -->
            <Spinner
                android:id="@+id/department_spinner"
                android:layout_gravity="left"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/signUpB"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@color/loginbt"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>