<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding = "10dp" >

    <!-- app name -->
    <TextView
        android:id = "@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:typeface="normal"
        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <!-- username box -->
        <EditText
            android:id="@+id/in_username"
            android:hint="@string/label_UserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/in_password"
            android:hint="@string/label_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Send Test Query"/>


        <!-- changed name to button login for logic use -->
        <Button
            android:id="@+id/buttonLgn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background= "@color/loginbt"
            android:text="LOG IN"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonSU"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/loginbt"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="New Member? Sign Up" />

    </LinearLayout>

</LinearLayout>